--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ p {
   margin-bottom: 1.5em; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #04700a;
-  font-family: "Playfair Display", Georgia, serif;
+  color: #2c98f0;;
+  font-family:'Times New Roman', Times, serif;
   font-weight: 400;
   margin: 0 0 30px 0; }
 
@@ -72,9 +72,9 @@ figure {
   float: left;
   width: 300px;
   position: fixed;
-  overflow-y: scroll;
+
   z-index: 1001;
-  background: #cbd9e9;
+  background: #000000;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
@@ -111,7 +111,7 @@ figure {
     #colorlib-aside #colorlib-logo a {
       display: block;
       text-align: center;
-      color: #000000;
+      color: #ffffff;
       padding-right: .3em; }
   #colorlib-aside #colorlib-main-menu {
     display: block;
@@ -129,16 +129,16 @@ figure {
         margin: 0 0 10px 0;
         padding: 0;
         list-style: none;
-        font-size: 12px;
+        font-size: 40px;
         font-weight: 500;
         text-transform: uppercase;
         letter-spacing: 1px; }
         #colorlib-aside #colorlib-main-menu ul li a {
-          color: rgb(3, 3, 3);
+          color: rgb(255, 255, 255);
           text-decoration: none;
           position: relative;
           padding: 10px 0;
-          font-family: "Quicksand", Arial, sans-serif;
+          font-family:'Times New Roman', Times, serif;
           -webkit-transition: 0.3s;
           -o-transition: 0.3s;
           transition: 0.3s; }
@@ -163,7 +163,7 @@ figure {
             transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
           #colorlib-aside #colorlib-main-menu ul li a:hover {
             text-decoration: none;
-            color: black; }
+            color: rgb(0, 68, 255); }
             #colorlib-aside #colorlib-main-menu ul li a:hover:after {
               visibility: visible;
               -webkit-transform: scaleX(1);
@@ -184,7 +184,7 @@ figure {
     font-size: 15px;
     text-align: center;
     font-weight: 400;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(255, 255, 255, 0.5);
     padding: 0 20px;
     width: 100%; }
     @media screen and (max-width: 768px) {
@@ -202,7 +202,7 @@ figure {
         display: inline;
         list-style: none; }
         #colorlib-aside .colorlib-footer ul li a {
-          color: rgba(10, 20, 167, 0.3);
+          color: rgba(0, 17, 255, 0.3);
           padding: 4px; }
           #colorlib-aside .colorlib-footer ul li a:hover, #colorlib-aside .colorlib-footer ul li a:active, #colorlib-aside .colorlib-footer ul li a:focus {
             text-decoration: none;
@@ -269,17 +269,17 @@ figure {
             background: transparent;
             border: 2px solid #2c98f0; }
     #colorlib-hero .flexslider .flex-direction-nav {
-      display: none; }
+      display: flex; }
     #colorlib-hero .flexslider .slider-text {
-      display: table;
+      display: flex;
       opacity: 0;
       min-height: 500px;
       z-index: 9; }
       #colorlib-hero .flexslider .slider-text > .slider-text-inner {
         display: table-cell;
-        vertical-align: middle;
+        vertical-align: center;
         min-height: 700px;
-        padding: 2.5em;
+        padding: 10.5em;
         position: relative; }
         @media screen and (max-width: 768px) {
           #colorlib-hero .flexslider .slider-text > .slider-text-inner {
@@ -287,13 +287,13 @@ figure {
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
           margin: 0;
           padding: 0;
-          color: rgb(0, 255, 55);
+          color: rgb(0, 0, 0);
           font-family:'Times New Roman', Times, serif }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
           margin-bottom: 20px;
-          font-size: 60px;
-          line-height: 1.0;
-          font-weight: 700; }
+          font-size: 100px;
+          line-height: 1.5;
+          font-weight: 1; }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
               font-size: 28px; } }
@@ -327,11 +327,11 @@ figure {
           font-weight: 400; }
           #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn {
             color: #ffffff;
-            border: 3px solid #000;
+            border: 3px solid #0059ff;
             background: transparent !important; }
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
               background: transparent !important;
-              border: 3px solid #0059ff !important; }
+              border: 3px solid #455470 !important; }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
               width: 100%; } }
@@ -429,19 +429,19 @@ body.offcanvas {
 .about-desc h3 {
   font-size: 18px;
   text-transform: uppercase;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
   font-weight: 500; }
 
 .hire {
-  padding: 2em;
-  background: #c6d827; }
+  padding: 10em;
+  background: #000000; }
   .hire h2 {
     line-height: 1.5; }
   .hire .btn-hire {
-    color: #000;
+    color: #ffffff;
     text-transform: uppercase;
-    letter-spacing: 1px;
-    bordeR: 1px solid #000;
+    letter-spacing: 0.5px;
+    bordeR: 2px solid #0059ff;
     padding: 2px 10px; }
 
 .fancy-collapse-panel .panel-default > .panel-heading {
@@ -455,9 +455,9 @@ body.offcanvas {
   font-size: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-family: "Quicksand", Arial, sans-serif;
+  font-family:'Times New Roman', Times, serif;
   background-color: #2c98f0;
-  color: #fff;
+  color: #000000;
   position: relative;
   -webkit-box-shadow: none !important;
   -moz-box-shadow: none !important;
@@ -488,14 +488,14 @@ body.offcanvas {
   content: "\e114"; }
 
 .panel-heading a.collapsed {
-  background: #f2f3f7;
-  border: 1px solid #031cff !important;
+  background: #ffffff;
+  border: 3px solid #363742 !important;
   color: #333333; }
 
 .panel-body {
   padding: 1.5em;
   margin-top: 5px;
-  border: 1px solid #e6e6e6 !important; }
+  border: 1px solid #000000 !important; }
 
 .timeline-centered {
   position: relative;
@@ -1222,7 +1222,7 @@ body.offcanvas {
     border: 2px solid #5bc0de; }
     .btn-info.btn-outline:hover, .btn-info.btn-outline:focus, .btn-info.btn-outline:active {
       background: #5bc0de;
-      color: #fff; }
+      color: #000000; }
 
 .btn-warning {
   background: #f0ad4e;
