--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,13 @@
   font-style: normal; }
 
 body {
+  background-image:url(/images/space123.jpg);
   font-family:'Times New Roman', Times, serif
   font-weight: 400;
   font-size: 15px;
   line-height: 1.8;
   color: rgba(0, 0, 0, 0.7); }
+ 
   @media screen and (max-width: 992px) {
     body {
       font-size: 16px; } }
