--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ body.offcanvas {
     -o-transform: translateX(0);
     transform: translateX(0);
     width: 300px;
-    background: #f2f3f7;
+    background: #000000;
     z-index: 999;
     position: fixed; }
   body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
@@ -435,14 +435,14 @@ body.offcanvas {
   font-weight: 500; }
 
 .hire {
-  padding: 10em;
+  padding: 5em;
   background: #000000; }
   .hire h2 {
     line-height: 1.5; }
   .hire .btn-hire {
     color: #ffffff;
     text-transform: uppercase;
-    letter-spacing: 0.5px;
+    letter-spacing: 1.5px;
     bordeR: 2px solid #0059ff;
     padding: 2px 10px; }
 
