--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,17 @@
   font-style: normal; }
 
 body {
-  background-image:url(/images/space123.jpg);
+  background-image:url(/images/prof1234.jpg);
+  background-size:contain;
+  background-attachment: fixed;
+  z-index: 0;
   font-family:'Times New Roman', Times, serif
   font-weight: 400;
   font-size: 15px;
   line-height: 1.8;
-  color: rgba(0, 0, 0, 0.7); }
+  color: rgba(0, 0, 0, 0.7);
+  
+ }
  
   @media screen and (max-width: 992px) {
     body {
